[package]
name = "crypto"
version = "0.1.0"
authors = ["geNAZt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"
cfb8 = "0.5.0"
aesni = "0.9.0"
sha2 = "0.9.1"
byteorder = "1.3.4"
elapsed = "0.1.2"
libdeflater = "0.5.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
