[package]
name = "crypto"
version = "1.2.3"
authors = ["geNAZt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.18.0"
cfb8 = "0.6.0"
aes = "0.6.0"
sha2 = "0.9.2"
byteorder = "1.3.4"
elapsed = "0.1.2"
libdeflater = "0.7.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
